Assignment 2 Part 2: UI now provides feedback to the user on whose turn it is to move. Done with part 2.

--- a/Pset 2/mainLayout.css
+++ b/Pset 2/mainLayout.css
@@ -19,3 +19,20 @@
 	height: 400px;
 	background: white;
 }
+
+#whoseturn{
+	text-align:center;
+}
+
+#turninfo{
+	text-align:center;
+	font-family: fantasy;
+}
+
+.red{
+	color:red;
+}
+
+.black{
+	color:black;
+}
